# PaperScope

./: README.md  pyproject.toml
prompts/: reading_layer_review.md
src/paperscope/: __init__.py  config.py  mcp_server.py  report.py  rules.yaml  scoring.py  types.py
src/paperscope/detectors/: __init__.py  citation_collision.py  citation_title_match.py  citations.py  duplicate_blocks.py  grim.py  internal_refs.py  llm_residue.py  numeric_consistency.py  statcheck.py  statistical_anomaly.py  table_consistency.py  template_residue.py
tests/: test_regression.py  test_smoke.py
